@@ -1,27 +1,28 @@
-package com.hprtech.ywddk.converter;
+package com.hprtech.ywddk.steps;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.hprtech.ywddk.contants.Constant;
+import com.hprtech.ywddk.converter.Step4ConvertToCsv;
 import com.hprtech.ywddk.dto.PostDTO;
 import com.opencsv.CSVWriter;
 
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Spliterators;
-import java.util.stream.Collectors;
+import java.io.*;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.*;
 import java.util.stream.StreamSupport;
 
-public class CSVConverter {
-    public static void main(String[] args) throws IOException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        String filePath = "C:\\Users\\hp\\Desktop\\YWDDK\\inprogress\\antterwasnayestory\\posts.json";
-        String csvFilePath = "C:\\Users\\hp\\Desktop\\YWDDK\\inprogress\\antterwasnayestory\\posts.csv";
-        File file = new File(filePath);
+public class Step5ConvertCsv {
 
+    public static void main(String[] args) throws IOException {
+        Map<String, String> typePathMap = Constant.typePathMap;
+        ObjectMapper objectMapper = new ObjectMapper();
+
+        Step4ConvertToCsv.deleteFile(Constant.typePathMap2.get("postsCsv"));
+
+        // Convert to csv
+        File file = new File(typePathMap.get("posts"));
         List<PostDTO> postDTOList = new ArrayList<>();
 
         // Read JSON array from file and convert it to a List of objects
@@ -38,20 +39,19 @@ public class CSVConverter {
                     .slug(jsonNode.get("slug").asText())
                     .status(jsonNode.get("status").asText())
                     .category(jsonNode.get("categories").toString().replace("[", "").replace("]", "").replace("\"", ""))
+                    .tag(jsonNode.get("tags").toString().replace("[", "").replace("]", "").replace("\"", ""))
                     .build());
         }
 
+        postDTOList.subList(100,50000);
+
         JsonNode rootNode = objectMapper.convertValue(postDTOList, JsonNode.class);
         // Create CSVWriter with FileWriter
-        try (CSVWriter csvWriter = new CSVWriter(new FileWriter(csvFilePath))) {
-            // Write header row
+        try (CSVWriter csvWriter = new CSVWriter(new FileWriter(Constant.typePathMap2.get("postsCsv")))) {
             csvWriter.writeNext(getHeader(rootNode));
-
-            // Write data rows
             writeData(csvWriter, rootNode);
         }
-
-        System.out.println("Conversion successful. CSV file created at: " + csvFilePath);
+        System.out.println("Conversion successful. CSV file created at: " + Constant.typePathMap2.get("postsCsv"));
     }
 
     private static String[] getHeader(JsonNode rootNode) {
@@ -59,8 +59,7 @@ public class CSVConverter {
         JsonNode firstObject = rootNode.isArray() ? rootNode.get(0) : rootNode;
         Iterator<String> fieldNames = firstObject.fieldNames();
 
-        List<String> headerList = StreamSupport.stream(Spliterators.spliteratorUnknownSize(fieldNames, 0), false)
-                .collect(Collectors.toList());
+        List<String> headerList = StreamSupport.stream(Spliterators.spliteratorUnknownSize(fieldNames, 0), false).toList();
 
         return headerList.toArray(new String[0]);
     }
